# algo3-tp1

ejercicio1/: CMakeLists.txt  main.cpp  tablero.cpp  tablero.h
ejercicio1/tests/: tests_tuki.cpp
ejercicio3/: CMakeLists.txt  main.cpp  saldos_sospechosos.cpp  saldos_sospechosos.h
ejercicio3/tests/: tests_saldos_sospechosos.cpp
ejercicio4/: CMakeLists.txt  choripanes.cpp  choripanes.h  ejemplos.txt  main.cpp
ejercicio4/tests/: tests_choripanes.cpp  tests_choripanesv2.cpp  tests_choripanesv3.cpp  tests_partes.cpp
